# ChatBotServer

./: .env  .gitignore  Dockerfile  README.md  gunicorn.conf.py  main.py  pyproject.toml  requirements.txt  setup.sh
conf/: Models.py
scripts/: install.sh  run_server.sh
src/: DB.py  LLM.py  __init__.py
utils/: HelperFunctions.py  InputUtils.py
