[tool.poetry]
name = "llm"
version = "0.1.0"
description = ""
authors = ["Yab <yabuman46@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "2.3.3"
Flask-Cors = "4.0.0"
gevent = "^24.2.1"
gunicorn = "^22.0.0"
langchain = "0.0.227"
python-dotenv = "1.0.0"
langchain-google-genai = "0.0.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
